--- a/source-css/berrytrain.css
+++ b/source-css/berrytrain.css
@@ -1,3 +1,35 @@
+
+
+/*Moving header from /r/yiff. Where else would I be spending my time?*/
+
+#header {
+	border: 0px;
+	border-bottom: 0px;
+	position: static;
+	background-image: url(%%up%%);
+	background-repeat: repeat-x;
+	-webkit-animation: headershow 50s;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-timing-function: linear;
+	animation-name: headershow;
+	animation-duration: 50s;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+}
+@-webkit-keyframes headershow
+{
+0%   {background-position: 0px;}
+100% {background-position: -2491px;}
+}
+@keyframes headershow
+{
+0%   {background-position: 0px;}
+100% {background-position: -2491px;}
+}
+
+
+
+
 .author[href$="/Moon-Phase"]:after {content: ' of all things lasers ';}
 
 .author[href$="/Mr.Celestia"]:after {content: ' Of Boxxy ';}
