--- a/source-css/cheesesandwichmlp.css
+++ b/source-css/cheesesandwichmlp.css
@@ -281,7 +281,7 @@ a[href|="/cheesechill"]{ background-position: -200px -100px }
 a[href|="/cheesemad"]{ background-position: -0px -200px }
 
 /* 150px shared values */
-a[href|="/cheeseshock"], a[href|="/cheesethis"], a[href|="/cheesehappy"], a[href|="/cheeseandpinkie"], a[href|="/accordian"], a[href|="/partyhard"], a[href|="/cheesesmile"], a[href|="/cheesehug"], a[href|="/ppcheesehug"], a[href|="/argumentinvalid"], a[href|="/cheeseandtubamouse"]{
+a[href|="/cheeseshock"], a[href|="/cheesethis"], a[href|="/cheesehappy"], a[href|="/cheeseandpinkie"], a[href|="/accordian"], a[href|="/partyhard"], a[href|="/cheesesmile"], a[href|="/cheesehug"], a[href|="/ppcheesehug"], a[href|="/argumentinvalid"], a[href|="/cheeseandtubamouse"], a[href|="/cheesewtf"]{
     display: block;
     clear: none;
     float: left;
@@ -301,6 +301,7 @@ a[href|="/cheesesmile"]{ background-position: -0px -300px; width: 103px }
 a[href|="/cheesehug"]{ background-position: -150px -300px }
 a[href|="/ppcheesehug"]{ background-position: -300px -300px }
 a[href|="/argumentinvalid"], a[href|="/cheeseandtubamouse"]{ background-position: -0px -450px }
+a[href|="/cheesewtf"]{ background-position: -150px -450px }
 
 /* oddballs */
 a[href|="/rubberchickendance"] { 
@@ -320,7 +321,7 @@ a[href|="/cheeseplay"] {
      float: left; 
      width: 84px; 
      height: 122px; 
-     background-image: url(%%cheeseaccordian-84x122-by-millennialdan-d75siyz%%) !important
+     background-image: url(%%cheeseplay%%) !important
 }
 
 a[href|="/cheeseidle"] { 
@@ -330,7 +331,7 @@ a[href|="/cheeseidle"] {
      float: left; 
      width: 106px; 
      height: 104px; 
-     background-image: url(%%cheeseidle-106x104-by-millennialdan-d75shhs%%) !important
+     background-image: url(%%cheeseidle%%) !important
 }
 
 a[href|="/cheesetrot"] { 
@@ -340,7 +341,7 @@ a[href|="/cheesetrot"] {
      float: left; 
      width: 110px; 
      height: 108px; 
-     background-image: url(%%cheesetrot-110x108-by-millennialdan-d75sj04%%) !important
+     background-image: url(%%cheesetrot%%) !important
 }
 
 /* comment inline emotes */
