--- a/source-css/maudpie.css
+++ b/source-css/maudpie.css
@@ -338,6 +338,9 @@ a[href|="/maudparty"]
 a[href|="/rmaudparty"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%maudparty%%)!important; background-position: 0 -100%;}
 
+a[href|="/maudheart"]
+{display:block;clear:none;float:left;width:131px;height:200px;background-image:url(%%maudpieheart%%)!important; background-position: 0 0;}
+
 a[href|="/maudwithit"]
 {display:block;clear:none;float:left;width:100px;height:100px;background-image:url(%%maudwithit%%)!important; background-position: 0 0;}
 
