--- a/source-css/ponymotesextra.css
+++ b/source-css/ponymotesextra.css
@@ -34,6 +34,7 @@ a[href|="/fsbatnom"] {background-image: url(%%fsbatnom%%);width:200px;height:130
 a[href|="/lunarainbowbarf"], a[href|="/lunabarf"] {background-image: url(%%lunarainbowbarf%%);width:191px;height:155px;display:block;float:left;}
 a[href|="/walkingabout"] {background-image: url(%%walkingabout%%);width:200px;height:156px;display:block;float:left;}
 a[href|="/rainbowdansen"] {background-image: url(%%rainbowdansen%%);width:165px;height:200px;display:block;float:left;}
+a[href|="/megameh"] {background-image: url(%%megameh%%);width:230px;height:194px;display:block;float:left;}
 
 /*
  ************
