--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -662,6 +662,17 @@ a[href|="/chibitavicello"] {
  background-position: -0px -0px;
 } 
 
+a[href|="/tavidashienuzzle"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 236px;
+ height: 150px;
+ background-image: url(%%spritesheet17%%);
+ background-position: -0px -1450px;
+} 
+
+
 a[href|="/tavivinylbathtime"] {  
  display: block;
  clear: none;
