--- a/source-css/zponymotes.css
+++ b/source-css/zponymotes.css
@@ -1,3 +1,13 @@
+a[href^="/deepcelewave"] {
+    background-position: 0px 0px;
+    display: block;
+    clear: none;
+    float: left;
+    width: 161px;
+    height: 120px;
+    background-image: url(%%DEEPCELEWAVE%%)
+    }
+
 a[href^="/twilikey"] {
     background-position: 0px 0px;
     display: block;
@@ -18,7 +28,7 @@ a[href^="/scrunchbattlelyra"] {
     background-image: url(%%scrunchbattlelyra%%)
     }
 
-a[href^="/dtlaugh"] {
+a[href^="/dtrofl"] {
     background-position: 0px 0px;
     display: block;
     clear: none;
