--- a/source-css/mylittleicons.css
+++ b/source-css/mylittleicons.css
@@ -350,6 +350,22 @@ a[href|="/glowcloud"], a[href|="/allhail"], a[href|="/i31"] {
         height: 380px;
         background-image: url(%%glowcloud%%)
         }
+a[href|="/venturewtf"], a[href|="/i32"] {
+        display: block;
+        clear: none;
+        float: left;
+        width: 188px;
+        height: 142px;
+        background-image: url(%%venturewtf%%)
+        }
+a[href|="/topkek"], a[href|="/i33"] {
+        display: block;
+        clear: none;
+        float: left;
+        width: 115px;
+        height: 182px;
+        background-image: url(%%topkek%%)
+        }
     /**********************
     *
     *    OTHER EMOTE STUFF
